--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 
                 <form>
                     <h3>Contact us</h3>
-                    <input type="text" placeholder="Your Name">
+                    <input type="text" placeholder="Your Name" maxlength="10" required>
                     <input type="text" id="datepicker" placeholder="Datetime Number">
-                    <input type="email" placeholder="Email Adress">
-                    <input type="text" placeholder="City">
+                    <input type="email" placeholder="Email Adress" required>
+                    <input type="text" placeholder="City" maxlength="10">
                     <div class="select__wrapper">
                         <select>
                             <option selected><p>Problem With</p></option>
