--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                     <h3>Contact us</h3>
                     <input type="text" placeholder="Your Name" maxlength="10" required>
                     <input type="text" id="datepicker" placeholder="Datetime Number">
-                    <input type="email" placeholder="Email Adress" required>
+                    <input type="email" placeholder="Email Adress" req>
                     <input type="text" placeholder="City" maxlength="10">
                     <div class="select__wrapper">
                         <select>
-                            <option selected><p>Problem With</p></option>
+                            <option selected>Problem With</option>
                             <option>1</option>
                             <option>1</option>
                             <option>1</option>
